--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-transition-group": "^4.3.0",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
