--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-photo-gallery": "^8.0.0",
     "react-reveal": "^1.2.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.0.1"
   },
